--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,7 @@
-00.00.00
+29.01.12
+- version 3.0.6
+- moved development from GitHub to bitbucket
+- renamed package from Polygon to Polygon3 to avoid conflicts with Polygon2
 - getting numpy include path automatically in setup.py
 - fixed https://github.com/jraedler/Polygon2/issues/2
 - added Utils.reducePointsDP() using the Douglas-Peucker algorithm
