--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,6 @@
+00.00.00
+- fixed some methods to work with instances of subclasses
+
 29.01.12
 - version 3.0.6
 - moved development from GitHub to bitbucket
