--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,5 @@
-0000-00-00
+2014-07-24
+- version 3.0.7
 - fixed some methods to work with instances of subclasses
 - fixed a bug in the SVG export (rgb), thanks to Diederik van Lierop
 - added optional labels to SVG export and changed default colors, thanks to 
