change download url

--- a/README
+++ b/README
@@ -12,6 +12,6 @@ Polygon3 works with Python 3.x, Polygon2 with Python 2.x.
 
 Homepage: http://www.j-raedler.de/projects/polygon/
 
-Development/Downloads: https://bitbucket.org/jraedler/polygon3
+Development/Downloads: https://github.com/jraedler/Polygon3
 
 For more information please look at Polygon.[txt,pdf] in the folder doc.
